fix scrollbar image size

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,11 @@ ul.scroll {
   display: none;
 }
 
+.scroll-item img {
+  width: 100%;
+  height: 100%;
+}
+
 @supports (scroll-snap-align: start) {
 
   /* modern scroll snap points */
